--- a/configs_CooperativePerception/opencood_configs/point_pillar_early_fusion.yaml
+++ b/configs_CooperativePerception/opencood_configs/point_pillar_early_fusion.yaml
@@ -1,19 +1,17 @@
-name: point_pillar_v2vnet
-root_dir: 'opv2v_data_dumping/train'
-validate_dir: 'opv2v_data_dumping/validate'
+name: point_pillar_early_fusion
+root_dir: "opv2v_data_dumping/train"
+validate_dir: "opv2v_data_dumping/validate"
 
 yaml_parser: "load_point_pillar_params"
 train_params:
   batch_size: &batch_size 2
-  epoches: 60
+  epoches: 15
   eval_freq: 1
   save_freq: 1
-  max_cav: &max_cav 2
 
 fusion:
-  core_method: 'IntermediateFusionDataset' # LateFusionDataset, EarlyFusionDataset, IntermediateFusionDataset supported
-  args:
-    proj_first: true
+  core_method: 'EarlyFusionDataset' # LateFusionDataset, EarlyFusionDataset, IntermediateFusionDataset supported
+  args: []
 
 # preprocess-related
 preprocess:
@@ -46,7 +44,6 @@ postprocess:
     w: 1.6
     h: 1.56
     r: [0, 90]
-    feature_stride: 4
     num: &achor_num 2
   target_args:
     pos_threshold: 0.6
@@ -58,15 +55,11 @@ postprocess:
 
 # model related
 model:
-  core_method: point_pillar_v2vnet
+  core_method: point_pillar
   args:
     voxel_size: *voxel_size
     lidar_range: *cav_lidar
     anchor_number: *achor_num
-    max_cav: *max_cav
-    compression: 0 # compression rate
-    backbone_fix: false
-
     pillar_vfe:
       use_norm: true
       with_distance: false
@@ -87,22 +80,7 @@ model:
       padding: [ 1 ]
       dim: [ 256 ]
       input_dim: 384 # 128 * 3
-
-    v2vfusion:
-      voxel_size: *voxel_size
-      downsample_rate: 4
-      num_iteration: 2
-      in_channels: 256
-      gru_flag: true
-      agg_operator: "avg" # max or avg
-      conv_gru:
-        H: 112
-        W: 112
-        num_layers: 1
-        kernel_size: [[3,3]]
-
-
-      # add decoder later
+    anchor_num: *achor_num
 
 loss:
   core_method: point_pillar_loss
@@ -112,7 +90,7 @@ loss:
 
 optimizer:
   core_method: Adam
-  lr: 0.001
+  lr: 0.002
   args:
     eps: 1e-10
     weight_decay: 1e-4
@@ -120,5 +98,5 @@ optimizer:
 lr_scheduler:
   core_method: multistep #step, multistep and Exponential support
   gamma: 0.1
-  step_size: [10, 50, 80]
+  step_size: [10, 15]
 
