--- a/configs_CooperativePerception/opencood_configs_new/point_pillar_v2xvit.yaml
+++ b/configs_CooperativePerception/opencood_configs_new/point_pillar_v2xvit.yaml
@@ -1,10 +1,23 @@
-name: point_pillar_v2vnet
-root_dir: 'opv2v_data_dumping/train'
-validate_dir: 'opv2v_data_dumping/validate'
+name: point_pillar_v2xvit
+root_dir: 'v2xset/train'
+validate_dir: 'v2xset/validate'
 
+wild_setting:
+  async: false
+  async_mode: 'sim'
+  async_overhead: 100
+  seed: 25
+  loc_err: false
+  xyz_std: 0.2
+  ryp_std: 0.2
+  data_size: 1.06 # Mb!!
+  transmission_speed: 27 # Mbps!!
+  backbone_delay: 10 # ms
+
+# match the configs with mmdet3d
 yaml_parser: "load_point_pillar_params"
 train_params:
-  batch_size: &batch_size 2
+  batch_size: &batch_size 3
   epoches: 60
   eval_freq: 1
   save_freq: 1
@@ -13,19 +26,24 @@ train_params:
 fusion:
   core_method: 'IntermediateFusionDataset' # LateFusionDataset, EarlyFusionDataset, IntermediateFusionDataset supported
   args:
-    proj_first: true
+    cur_ego_pose_flag: False
+      # when the cur_ego_pose_flag is set to True, there is no time gap
+      # between  the time when the LiDAR data is captured by connected
+      # agents and when the extracted features are received by
+      # the ego vehicle, which is equal to implement STCM. When set to False,
+      # STCM has to be used.
 
 # preprocess-related
 preprocess:
   # options: BasePreprocessor, VoxelPreprocessor, BevPreprocessor
   core_method: 'SpVoxelPreprocessor'
   args:
-    voxel_size: &voxel_size [0.25, 0.25, 8]
+    voxel_size: &voxel_size [0.4, 0.4, 8]
     max_points_per_voxel: 32
     max_voxel_train: 32000
     max_voxel_test: 70000
   # lidar range for each individual cav.
-  cav_lidar_range: &cav_lidar [-56, -56, -5, 56, 56, 3]
+  cav_lidar_range: &cav_lidar [-51.2, -51.2, -5, 51.2, 51.2, 3]
 
 data_augment:
   - NAME: random_world_flip
@@ -42,23 +60,23 @@ postprocess:
   core_method: 'VoxelPostprocessor' # VoxelPostprocessor, BevPostprocessor supported
   anchor_args:
     cav_lidar_range: *cav_lidar
-    l: 3.9
-    w: 1.6
-    h: 1.56
+    l: 2.5
+    w: 1.1
+    h: 0.9
     r: [0, 90]
     feature_stride: 4
     num: &achor_num 2
   target_args:
     pos_threshold: 0.6
     neg_threshold: 0.45
-    score_threshold: 0.20
+    score_threshold: 0.27
   order: 'hwl' # hwl or lwh
   max_num: 100 # maximum number of objects in a single frame. use this number to make sure different frames has the same dimension in the same batch
   nms_thresh: 0.15
 
 # model related
 model:
-  core_method: point_pillar_v2vnet
+  core_method: point_pillar_transformer
   args:
     voxel_size: *voxel_size
     lidar_range: *cav_lidar
@@ -82,25 +100,46 @@ model:
       upsample_strides: [1, 2, 4]
       num_upsample_filter: [128, 128, 128]
     shrink_header:
-      kernal_size: [ 3 ]
-      stride: [ 2 ]
-      padding: [ 1 ]
-      dim: [ 256 ]
+      kernal_size: [3]
+      stride: [2]
+      padding: [1]
+      dim: [256]
       input_dim: 384 # 128 * 3
 
-    v2vfusion:
-      voxel_size: *voxel_size
-      downsample_rate: 4
-      num_iteration: 2
-      in_channels: 256
-      gru_flag: true
-      agg_operator: "avg" # max or avg
-      conv_gru:
-        H: 112
-        W: 112
-        num_layers: 1
-        kernel_size: [[3,3]]
-
+    transformer:
+      encoder: &encoder
+        # number of fusion blocks per encoder layer
+        num_blocks: 1
+        # number of encoder layers
+        depth: 3
+        use_roi_mask: true
+        use_RTE: &use_RTE true
+        RTE_ratio: &RTE_ratio 2 # 2 means the dt has 100ms interval while 1 means 50 ms interval
+        # agent-wise attention
+        cav_att_config: &cav_att_config
+          dim: 256
+          use_hetero: true
+          use_RTE: *use_RTE
+          RTE_ratio: *RTE_ratio
+          heads: 8
+          dim_head: 32
+          dropout: 0.3
+        # spatial-wise attention
+        pwindow_att_config: &pwindow_att_config
+          dim: 256
+          heads: [16, 8, 4]
+          dim_head: [16, 32, 64]
+          dropout: 0.3
+          window_size: [4, 8, 16]
+          relative_pos_embedding: true
+          fusion_method: 'split_attn'
+        # feedforward condition
+        feed_forward: &feed_forward
+          mlp_dim: 256
+          dropout: 0.3
+        sttf: &sttf
+          voxel_size: *voxel_size
+          downsample_rate: 4
 
       # add decoder later
 
@@ -120,5 +159,5 @@ optimizer:
 lr_scheduler:
   core_method: multistep #step, multistep and Exponential support
   gamma: 0.1
-  step_size: [10, 50, 80]
+  step_size: [15, 50]
 
