Changes to be committed: 	modified:   .gitignore 	new file:   configs_CooperativePerception/voxelnext/cooperative_voxel_next_sps_pool.py 	modified:   mmdet3d_plugin/datasets/dolphins_dataset.py 	modified:   mmdet3d_plugin/models/backbones_3d/spconv_backbone_voxelnext_sps.py 	modified:   mmdet3d_plugin/models/dense_heads/__init__.py 	modified:   mmdet3d_plugin/models/dense_heads/voxelnext_head_maxpool.py 	modified:   tools/create_data.py 	modified:   tools/data_converter/dolphins_converter.py

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ mmdet3d/core/evaluation/waymo_utils/compute_detection_metrics_main
 cache/*
 *.npy
 visual/
+*.bundle
+
+configs_CooperativePerception/bevfusion_configs/*
